# 1122334

./: .gitignore  CMakeLists.txt  README.md
cm_procinject/: CMakeLists.txt  Early Cascade APC Injection.cpp  Early Cascade APC Injection.h  ListPlanting.cpp  ListPlanting.h  RemoteThreadInject.cpp  SetWindowsHookEx.cpp  alpccallback.cpp  alpccallback.h  apc1.cpp  apc1.h  apcearlybride.cpp  apcearlybride.h  atombombing.cpp  atombombing.h  clipbrdwndclass.cpp  clipbrdwndclass.h  cm_procinject.cpp  cm_procinject.h  conhostinject.cpp  conhostinject.h  ctrlinject.cpp  ctrlinject.h  dnscallback.cpp  dnscallback.h  eminject.cpp  eminject.h  ewmi.cpp  ewmi.h  kctcallback.cpp  kctcallback.h  knowndlls.cpp  knowndlls.h  ntAPI.h  ntStructs.h  processHypnosis.cpp  processHypnosis.h  propagate.cpp  propagate.h  shellcode.h  (+9 more)
cm_procinject/ntlib_modexp/: nttpp.h  util.h
dll_procinject/: CMakeLists.txt  dll.cpp  dll.h
test_proj/: CMakeLists.txt  enumProp.cpp  enumProp.h  enumWindowCallback_shellTray.cpp  enumWindowCallback_shellTray.h  listknowndlls.cpp  listknowndlls.h  scanHandleType.cpp  scanHandleType.h  test.cpp  test_main.cpp
